src/styles/_site.scss
@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&display=swap');

@font-face {
  font-family: "Objective";
  src: local("Objective"),
       url(./fonts/Objective-Regular.woff2) format("woff2");
}

div, p, h1, h2, h3, h4, h5, h6, body, button {
  font-family: 'Quicksand', sans-serif;
  font-style: normal;
}

.v-overlay {
  z-index: 0 !important;
}

h1 {
  font-weight: bold;
  font-size: 40px;
  line-height: 47px;
  color: #00B520;
}

h2 {
  font-weight: bold;
  font-size: 36px;
  line-height: 138.27%;
  color: #00B520;
}

p {
  font-weight: normal;
  font-size: 18px;
  line-height: 21px;
  color: #00B520;
}

.custom-background {
  background: #fff;
  height: 100%;
}

.number {
  width: 23px;
  height: 23px;
  font-size: 12px;
  line-height: 15px;
  border: 1px solid #00B520;
  box-sizing: border-box;
  border-radius: 50%;
  padding: 3px 7px 3px 7px;
  text-align: center;
  margin-right: 5px;
  color: #000 !important;
}

.number-filled {
  width: 23px;
  height: 23px;
  font-size: 12px;
  line-height: 15px;
  border: 1px solid #00B520;
  box-sizing: border-box;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  margin-right: 5px;
  background: #00B520;
  color: #fff !important;
}

a {
  font-weight: normal;
  font-size: 12px;
  line-height: 14px;
  text-decoration-line: underline;
  color: #00B43C !important;
  display: flex;
  justify-items: center;
  align-items: center;
}

.v-btn {
  letter-spacing: normal !important;
  text-transform: none !important;
  box-shadow: none !important;
}

.v-card {
  border-radius: 20px !important;
}

.v-dialog {
  border-radius: 20px !important;
}

.v-tooltip {
  border-radius: 20px !important;
}

.theme--light.v-btn.v-btn--disabled .v-icon {
  color: rgb(181,202,184,1) !important;
}

.shadow {
  text-shadow: 1px 1px 1px #000;
}

.boldie {
  font-weight: bold !important;
}

.blackish {
  color: #000 !important;
}

.whiteish {
  color: #fff !important;
}

.greenish {
  color: #00B520 !important;
}

.grayish {
  color: #C4C4C4 !important;
}

.gray-greenish {
  color: #B5CAB8 !important;
}

.blueish {
  color: #008CFF !important;
}

.yellowish {
  color: #F6C61B !important;
}

.ligth-grayish {
  color: #F5FAFF !important;
}

.max-width {
  max-width: 1140px;
}

.normalized-height {
  min-height: 40vh;

  @media screen and (max-height: 1440px) {
      min-height: 50vh;
  }
  @media screen and (max-height: 1080px) {
      min-height: 65vh;
  }
  @media screen and (max-height: 720px) {
      min-height: 75vh;
  }
}

body {
  @media screen and (max-width: 959px) {
    height: 100vh;
    overflow: hidden;
  }
}

